[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/nodes/ProjectTree.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Load.svg" type="Texture" id=2]

[node name="ProjectTree" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 280, 500 )
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFolderDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 480 )
hint_tooltip = "Open project folder"
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/Users/user/Documents/tilepipe"
current_path = "/Users/user/Documents/tilepipe/"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_right = 1280.0
margin_bottom = 715.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1275.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="DirLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1239.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
size_flags_horizontal = 3
text = "C:/a/b/c/"
editable = false

[node name="DirLoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1243.0
margin_right = 1275.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 2 )

[node name="TileScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 1275.0
margin_bottom = 715.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="TileVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TileScrollContainer"]
margin_right = 1275.0
size_flags_horizontal = 3

[connection signal="dir_selected" from="OpenFolderDialog" to="." method="_on_OpenFolderDialog_dir_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DirLoadButton" to="." method="_on_DirLoadButton_pressed"]
